apps/audiobookshelf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: audiobookshelf
  name: abs
