apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: abs
  labels: &labels
    app.kubernetes.io/component: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
spec:
  selector: *labels
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: audiobookshelf
---
